2003-03-10  Breda McColgan  <Breda.McColgan@sun.com>

        * docs/C/mixer_applet2.xml: Had inadvertently overwritten John Fleck's update of 2002-11-26. Have now re-corrected "Run Audio Mixer" to "Run Volume Control".

        * docs/C/mixer_applet2-C.omf : Updated to reflect new manual version
        number and date

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* mixer.c: (mixer_help_cb): update for screen-exec changes.

2003-01-22  Breda McColgan  <Breda.McColgan@sun.com>

        * docs/C/mixer_applet2.xml: Updated for GNOME 2.2

        * docs/C/mixer_applet2-C.omf : Updated to reflect new manual version
        number and date

2003-01-08  Stanislav Brabec  <sbrabec@suse.cz>

	* mixer.c: Make SOUND_MIXER_SPEAKER change powerpc specific. Fixes
	bug #96639.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_MixerApplet.server.in.in: added bugzilla attributtes

2002-11-27  Kevin Vandersloot <kfv101@psu.edu>

	* mixer.c: don't register stock icons if they have been registred already. Kill a
	warning also. Fixes bug #99156

2002-11-26 John Fleck <jfleck@inkstain.net>

	* docs/C/mixer_applet2.xml
	update to new wording for "run volume control"
	remove
	* docs/C/figures/mixer_applet.png
	which we don't use any more

2002-09-15  Juan Salaverria <rael@vectorstar.net>

	* GNOME_MixerApplet.xml: Added a separator in the
	menu. May fix bug #89864

2002-10-30  Glynn Foster  <glynn.foster@sun.com>

	* *small.png : Remove since we don't need them anymore.

2002-10-30  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Remove installation of the -small images.
	* mixer.c: (mixer_load_volume_images), (mixer_update_image),
	(mixer_popup_hide), (applet_change_size_cb),
	(register_mixer_stock_icons), (mixer_init_stock_icons),
	(applet_style_event_cb), (mixer_applet_create): We now have
	icon theming. Theme the volume and mute icons. Fixes bug 
	#96085.

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* mixer.c: (mixer_popup_show), (mixer_start_gmix_cb),