@@ -1,3 +1,8 @@
+2003-03-12  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>
+
+	* mixer.c : Sync mute functionality with other applications in Solaris 
+	Fixes bug #105724
+
 2003-03-10  Breda McColgan  <Breda.McColgan@sun.com>
 
         * docs/C/mixer_applet2.xml: Had inadvertently overwritten John Fleck's update of 2002-11-26. Have now re-corrected "Run Audio Mixer" to "Run Volume Control".
